automatically backed up by learn

--- a/style.css
+++ b/style.css
@@ -14,3 +14,13 @@ header {
 header nav {
   float: right;
 }
+
+nav ul {
+  padding: 0;
+  margin: 40px 0 0;
+}
+
+nav ul li {
+  display: inline;
+  margin-right: 10px;
+}
